# chronos

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  chronos.spec  config-sample.toml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: release.yml
ai/: AGENTS.md  ARCHITECTURE.md  CONVENTIONS.md  MCP.md  PLAN.md  RECURRENCE.md  SPECIFICATIONS.md  SYNCHRONIZATION.md  TASKS.md  TUI_TESTING_PLAN.md
installer/windows/: chronos.iss
scripts/: build.py  setup-hooks.sh
src/chronos/: __init__.py  __main__.py  authorization.py  bootstrap.py  caldav_client.py  cli.py  config.py  credentials.py  domain.py  ical_parser.py  index_store.py  ingest.py  locking.py  mcp_server.py  mcp_state.py  mcp_transport.py  mutations.py  oauth.py  paths.py  protocols.py  recurrence.py  services.py  storage.py  storage_indexing.py  sync.py
src/chronos/caldav/: __init__.py  errors.py  protocol.py  session.py  xml.py
src/chronos/http/: __init__.py  auth.py  client.py  errors.py
src/chronos/tui/: __init__.py  app.py  bindings.py  terminal.py  views.py
src/chronos/tui/screens/: agenda_screen.py  confirm_screen.py  day_view_screen.py  event_detail_screen.py  event_edit_screen.py  grid_view_screen.py  help_screen.py  import_ics_screen.py  main_screen.py  month_view_screen.py  oauth_progress_screen.py  search_dialog_screen.py  sync_confirm_screen.py  sync_progress_screen.py  todo_list_screen.py  week_view_screen.py
src/chronos/tui/widgets/: calendar_panel.py  date_picker.py  event_list.py  event_view.py  timeline_grid.py
tests/: corpus.py  fake_caldav.py  test_bootstrap.py  test_caldav_client.py  test_caldav_integration.py  test_caldav_protocol.py  test_caldav_session.py  test_caldav_xml.py  test_cli.py  test_config.py  test_corpus.py  test_credentials.py  test_http_client.py  test_ical_parser.py  test_index_store.py  test_ingest.py  test_locking.py  test_mcp_server.py  test_mcp_transport.py  test_oauth.py  test_occurrences_cache.py  test_paths.py  test_recurrence.py  test_services.py  test_smoke.py  test_storage.py  test_storage_indexing.py  test_sync.py  test_tui_flows.py
