[project]
name = "chronos"
version = "0.1.0"
description = "Terminal-first calendar client with CalDAV synchronisation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icalendar>=5.0",
    "python-dateutil>=2.9",
    "textual>=0.80",
    "tinymcp",
    "tomli-w>=1.0",
]

[tool.uv.sources]
tinymcp = { git = "https://github.com/juanjosegarciaripoll/tinymcp.git" }

[project.scripts]
chronos = "chronos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronos"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "basedpyright>=1.17",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pyinstrument>=5.0",
    "types-python-dateutil>=2.9",
    "coverage>=7.13.5",
    "pytest-cov>=7.1.0",
]
build = [
    "build>=1.2",
    "pyinstaller>=6.0",
]
docs = [
    "mkdocs-material>=9.6",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ARG", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["chronos"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["chronos"]

[[tool.mypy.overrides]]
module = ["icalendar.*"]
ignore_missing_imports = true

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--cov=chronos",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--ignore=tests/test_caldav_integration.py",
]

[tool.coverage.run]
branch = true
source = ["src/chronos"]
omit = [
    "src/chronos/__main__.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise AssertionError\\(\"unreachable",
]
show_missing = true
skip_covered = false
